To build in Nonstop
changes
1. common directory renamed to +common so that it build first
2. changes in the Makefile to look for the  nsfti  headers and library locations
3. changes in Makefile to look for zsysdefs and zguard headers
4. removed the executable from 03_nsfti_namespace/bin
5. update in 04_dollar_recv_ipc sources

--- a/nsfti/Makefile
+++ b/nsfti/Makefile
@@ -21,16 +21,16 @@ export AR = /usr/bin/ar
 endif
 
 OPT = -O2
-COMMON_DIR = $(TOPDIR)/common
+COMMON_DIR = $(TOPDIR)/+common
 
-export CFLAGS = $(OPT) -g -Wextensions -D_XOPEN_SOURCE_EXTENDED 
+export CFLAGS = $(OPT) -g -Wextensions -D_XOPEN_SOURCE_EXTENDED -Wnowarn 
 export CPPFLAGS = -D_XOPEN_SOURCE_EXTENDED 
 
-export CXXFLAGS = $(OPT) -Wlp64 -g -Wextensions -D_XOPEN_SOURCE_EXTENDED \
-	   -I$(COMMON_DIR)
+export CXXFLAGS = $(OPT) -Wlp64 -g -Wextensions -D_XOPEN_SOURCE_EXTENDED -Wnowarn \
+	   -I$(COMMON_DIR) -I/usr/tandem/middlewaretools/include/  -I/G/system/zsysdefs -I/G/system/zguard
 export CXXLIBS = -lcppc -lcpp4
-export FTILIB = -lnsfti
-export LIBUTIL = -L$(COMMON_DIR) -lftiutil
+export FTILIB = -L/usr/tandem/middlewaretools/lib -lnsfti
+export LIBUTIL = -L$(COMMON_DIR) -lftiutil 
 
 TOPTARGETS := all clean
 
