To address the pull request comment
1. Updated the directory name to match with the naming convention.
2. Updated the Makefile to look for the updated directory name

--- a/nsfti/Makefile
+++ b/nsfti/Makefile
@@ -21,7 +21,7 @@ export AR = /usr/bin/ar
 endif
 
 OPT = -O2
-COMMON_DIR = $(TOPDIR)/+common
+COMMON_DIR = $(TOPDIR)/00_common
 
 export CFLAGS = $(OPT) -g -Wextensions -D_XOPEN_SOURCE_EXTENDED -Wnowarn 
 export CPPFLAGS = -D_XOPEN_SOURCE_EXTENDED 
